2015-03-07  Werner Lemberg  <wl@gnu.org>

	[ftmulti] Various minor compiler warning fixes.

	* src/ftmulti.c: Fix signedness issues.
	Add `static' keyword where appropriate.
	(CENTER_X, CENTER_Y, autorun, use_grays, raster_buff, FLOOR, CEIL,
	TRUNC): Removed.  Unused.

2015-03-06  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Various minor compiler warning fixes.

	* src/ftgrid.c: Fix signedness issues.
	(event_axis_change, event_font_change): Avoid variable shadowing.
	(CEIL, X_TOO_LONG, Y_TOO_LONG): Removed.  Unused.

2015-03-06  Werner Lemberg  <wl@gnu.org>

	* src/ftgamma.c: Various minor compiler warning fixes.

2015-03-06  Werner Lemberg  <wl@gnu.org>

	[ftcommon] Various minor compiler warning fixes.

	* src/ftcommon.c: Fix signedness issues.
	(my_face_requester): Remove dead code.
	(FTDemo_Install_Font): Protect against stream failure.
	(string_render_prepare): Add `static' keyword.
	* src/ftcommon.h: Updated.

2015-03-05  Werner Lemberg  <wl@gnu.org>

	* src/ftdiff.c: Various minor compiler warning fixes.

2015-03-05  Werner Lemberg  <wl@gnu.org>

	[graph] Many compiler warning fixes.

	* graph/*, graph/x11/*: Fix signedness issues.
	Unified handling of unused variables.
	Add `static' keyword where appropriate.
	Include `foo.h' into `foo.c' where appropriate.

	* graph/grobjs.c, graph/grobjs.h (grRealloc): Removed.  Unused.

2015-03-04  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Various compiler warning fixes.

	* src/ttdebug.c: Decorate global variables/functions with `static'.
	Signedness fixes.
	(main): Protect various command line arguments against invalid
	values.

2015-03-04  Werner Lemberg  <wl@gnu.org>

	* src/ftlint.c: Various minor compiler warning fixes.

2015-03-04  Werner Lemberg  <wl@gnu.org>

	* src/ftdump.c: Various minor compiler warning fixes.

2015-03-04  Werner Lemberg  <wl@gnu.org>

	[ftbench] Various compiler warning fixes.

	* src/ftbench.c: Decorate global variables/functions with `static'.
	Signedness fixes.